# Png2Svg

./: .gitignore  CREDITS.md  Makefile  README.md  batch_convert.sh  example.py  generate_svg_complete.py  install.sh  main.py  requirements.txt  test.py  vectorizer.py
cpp/: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  cmake_uninstall.cmake.in
cpp/include/: vectorizer.h
cpp/src/: main.cpp  vectorizer.cpp
